--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script src="js/jquery-1.11.2.min.js"></script>
   <script src="js/jquery.mobile-1.4.5.min.js"></script>
   <script src="js/acciones.js" type="text/javascript"></script>
-  <!-- <script src="phonegap.js" type="text/javascript"></script> -->
+   <script src="phonegap.js" type="text/javascript"></script> 
  </head>
 
  <body>
@@ -51,11 +51,11 @@
      <div data-role="main" class="ui-content" style=" height:80%;">
     
         <div align="center">
-          <div id="uno"    style="color:#FFF; background-color:#00F; width:50%; height:250px; float:left; " >1</div>	
-          <div  id="dos"   style="color:#FFF; background-color:#0C0; width:50%; height:250px; float:left;  ">2</div>	
+          <div id="uno"    style="color:#FFF; background-color:#00F; width:50%; height:250px; float:left; " ></div>	
+          <div  id="dos"   style="color:#FFF; background-color:#0C0; width:50%; height:250px; float:left;  "></div>	
         
-          <div  id="tres" style="color:#FFF; background-color:#C00; width:50%; height:250px; float:left;  ">3</div>	
-          <div  id="cuatro"  style="color:#FFF; background-color:#FF3; width:50%; height:250px; float:left;  ">4</div>	
+          <div  id="tres" style="color:#FFF; background-color:#C00; width:50%; height:250px; float:left;  "></div>	
+          <div  id="cuatro"  style="color:#FFF; background-color:#FF3; width:50%; height:250px; float:left;  "></div>	
         </div>
      </div>   
 
